# npy-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
benches/: bench.rs
examples/: large.rs  main.rs  plain.npy  plain.rs  roundtrip.npy  roundtrip.rs  simple.npy  simple.rs  vector.npy  vector.rs
npy-derive/: Cargo.toml
npy-derive/src/: lib.rs
src/: header.rs  lib.rs  npy_data.rs  out_file.rs  readable.rs  serializable.rs  serialize.rs  seriazable.rs  type_str.rs  writeable.rs
test/: file.npy
tests/: derive_hygiene.rs  roundtrip.rs  serialize_array.rs
