[package]
name = "npy"
version = "0.4.0"
authors = ["Pavel Potocek <pavelpotocek@gmail.com>"]
license = "MIT"
description = "NumPy file format (de-)serialization"
repository = "https://github.com/potocpav/npy-rs"
homepage = "https://github.com/potocpav/npy-rs"
documentation = "https://docs.rs/npy/"
keywords = ["numpy", "npy"]
categories = ["encoding"]
readme = "README.md"

[workspace]
members = [ "npy-derive" ]

[dependencies]
byteorder = "1"
nom = "3"

[dependencies.npy-derive]
path = "npy-derive"
version = "0.4"
optional = true
default-features = false

[dev-dependencies]
memmap = "0.6"

[features]
default = []

# Reexports the derive macros so that you can use them qualified under `npy::`:
#
#     #[derive(npy::Serialize, npy::Deserialize, npy::AutoSerialize)]
#     struct Struct { ... }
#
# This is a nicer alternative to `#[macro_use] extern crate npy_derive`, which
# directly imports things like `#[derive(Serialize)]` that may conflict with
# other crates (e.g. `serde`).
derive = ["npy-derive"]

[[example]]
name = "plain"

[[example]]
name = "large"
required-features = ["derive"]

[[example]]
name = "simple"
required-features = ["derive"]

[[example]]
name = "roundtrip"
required-features = ["derive"]

[[test]]
name = "roundtrip"
required-features = ["derive"]
