[package]
name = "npy-derive"
version = "0.3.0"
authors = ["Pavel Potocek <pavelpotocek@gmail.com>"]
license = "MIT"
description = "Macros 1.1 implementation of #[derive(NpyRecord)] for crate npy"
repository = "https://github.com/potocpav/npy-rs"

[lib]
proc-macro = true

[dependencies]
quote = "0.3"
syn = "0.11"
